--- a/index.html
+++ b/index.html
@@ -151,6 +151,38 @@
             </div>
         </section>
         <!-- great tea section ends -->
+        <!-- super client section starts -->
+        <div class="px-16">
+            <section class="my-24 px-16 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-orange-600 to-red-100  py-24">
+            <div class="space-y-5">
+                <h2 class="text-5xl font-extrabold text-white">
+                    Meet Our Super <br>
+                    Clients
+                </h2>
+                <p class="text-white">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable
+                </p>
+                <button class="btn btn-primary">Show Off</button>
+            </div>
+
+            <div>
+                <!-- review start -->
+                <div class="p-10 rounded-lg bg-white relative">
+                    <img class="absolute -left-5 -top-5" src="images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+
+                </div>
+                <!-- review end -->
+            </div>
+        </section></div>
+        
+        <!-- super client section ends -->
 
     </main>
     <footer></footer>
